# units

./: .env  .envrc  .gitignore  Cargo.toml  README.md  TODO.md  build.rs  package-lock.json  test.sh  typescript  units.db  units_zk.db  units_zk.db-shm  units_zk.db-wal
.github/workflows/: CI-clippy.yml  CI-fmt.yml  CI-modules.yml  CI-test.yml  CI.yml
.sqlx/: query-111863d49607f7da6b5a48900467a9c3dae612be51b1a2d56900a5e7b262f76d.json  query-2abe83e85d9e738da26d9211fdd6aaaa7d8a893597307b6b87ad412c03acfc3d.json  query-2d6257491844a756dfe15be58020bd7399b8613b88125d3924c36649ddca614d.json  query-2de66f8cf0b4afa1654cf2ad75a28811d08201d9becbc7314d8cc645406901fa.json  query-3107c89e1ce6c3d873aeec31bbe05a231fc691e5c88be0347fdf1836ed932fd4.json  query-477de42803285d48c8ec19d030734029f198aeae9569842c8e78cbdeb8e24b10.json  query-6efe0d020538c5121f31214b66ac7a3dbc0c2ac568e30248e7015b0a9fdd19f9.json  query-7083264e69781db4fcfde5084656a6ad1e0280f8d58bf04e5c13d26b8f9140e2.json  query-99be94679fd7f5a75a1567ee4d015298173619b51a928831c63bcf143c0bee64.json  query-a070f8a8694f44e9ccc92a3d5a339c4f1d7e64844de6cf66c62d879f3d29814e.json  query-c0035b2b2fc91172537fcda4419e6cbeee5a7ad792c89781490807ff7cc1d0b1.json  query-d4546252df8131ad0af589088d9fbf340f340c5f362090fe55baf954c05adcbb.json
config/: development.toml
docs/: APPENDIX.md  ARCHITECTURE.md  DEVELOPMENT.md  MANUAL.md  MODULE.md  NOTES.md  TRY_LOCALLY.md
migrations/: 20250206_000000_create_table.sql
modules/: order.sh
modules/accounts/account_cairo/: Scarb.toml
modules/accounts/account_cairo/src/: lib.cairo
modules/component-driver/: bind1.sh
modules/component-driver/src/: lib.rs
modules/component-driver/wit/: driver.wit  types.wit
modules/component-sol-driver/src/: bindings.rs
modules/component-transfer-module/: Cargo.toml  exec.sh
modules/component-transfer-module/wit/: world.wit
modules/component-view-module/src/: lib.rs
modules/driver/: .Makefile.swp  Cargo.toml  Makefile  bind1.sh  bind2.sh  load-driver.sh  send-details.sh
modules/driver/src/: lib.rs  safe_driver.rs
modules/drivers/component-cred-driver/: Cargo.toml
modules/drivers/component-cred-driver/src/: lib.rs
modules/drivers/component-cred-driver/wit/: types.wit
modules/drivers/component-driver/: Cargo.toml  bind1.sh  bind2.sh  load-driver.sh
modules/drivers/component-driver/src/: bindings.rs  lib.rs
modules/drivers/component-driver/wit/: driver.wit
modules/drivers/component-sol-driver/: Cargo.toml  load-driver.sh
modules/drivers/component-sol-driver/src/: lib.rs
modules/drivers/component-upi-driver/: .gitignore  Cargo.toml  bind1.sh  bind2.sh  load-driver.sh
modules/drivers/component-upi-driver/src/: .env  bindings.rs  lib.rs
modules/drivers/component-upi-driver/wit/: types.wit
modules/drivers/component_cred_driver_cairo/src/: lib.cairo
modules/programs/component-transfer-module/: exec.sh
modules/programs/component-transfer-module/src/: bindings.rs  lib.rs
modules/programs/component-transfer-module/wit/: types.wit
modules/programs/component-transfer-verify-module/: Cargo.toml  exec.sh
modules/programs/component-transfer-verify-module/src/: check.rs  lib.rs
modules/programs/component-transfer-verify-module/wit/: module.wit
modules/programs/component-view-module/: exec.sh
modules/programs/component-view-module/src/: bindings.rs  lib.rs
modules/sol-driver/: Cargo.toml  Makefile  bind1.sh  bind2.sh
modules/sol-driver/src/: lib.rs  safe_driver.rs
modules/user-module/: Cargo.toml  Makefile  exec.sh
modules/user-module/src/: lib.rs  safe_drivers.rs
proto/: service.proto  user.proto
scripts/: create-driver.sh  create-program.sh
src/: dispatcher.rs  health.rs  lib.rs  runtime.rs  runtime_v2.rs  server.rs  service.rs  types.rs  utils.rs
src/runtime/: binding.rs  driver.rs  pal.rs  platform.rs  privi.rs  process.rs  resolver.rs  service.rs  types.rs  val.rs
src/runtime/binding/: driver.rs  platform.rs
src/runtime/integration/: solana.rs
src/runtime/types/: formatter.rs  impls.rs
src/runtime_v2/: driver.rs  glue.rs  platform.rs  process.rs  provable.rs  resolver.rs  service.rs  storage.rs  types.rs
src/runtime_v2/glue/: driver.rs  process.rs
src/runtime_v2/platform/: users.rs
src/runtime_v2/storage/: sql.rs
ui/pofi-sys-ui/: README.md  finternet.proto  package.json
ui/pofi-sys-ui/src/components/: JsonPrettify.tsx
ui/pofi-sys-ui/src/lib/: backend.ts
ui/pofi-sys-ui/src/proto/: finternet_pb.d.ts  finternet_pb.js
ui/units-tui/: .envrc  Cargo.toml  build.rs
ui/units-tui/proto/: user.proto
ui/units-tui/src/: config.rs  grpc.rs  main.rs
ui/units-ui/: CHANGELOG.md  ISSUE_TEMPLATE.md  README.md  finternet.proto  genezio.yaml  package-lock.json  package.json  tailwind.config.ts
ui/units-ui/.github/workflows/: main.yml
ui/units-ui/.next/: trace
ui/units-ui/.next/cache/: .rscinfo
ui/units-ui/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
ui/units-ui/.next/server/app/: page.js  page_client-reference-manifest.js
ui/units-ui/.next/server/vendor-chunks/: @floating-ui.js  @radix-ui.js  @swc.js  aria-hidden.js  class-variance-authority.js  clsx.js  get-nonce.js  google-protobuf.js  grpc-web.js  lucide-react.js  next.js  react-remove-scroll-bar.js  (+6 more)
ui/units-ui/Documentation/: documentation.html
ui/units-ui/proto/: service.proto
ui/units-ui/public/: index.html  manifest.json
ui/units-ui/src/: App.js  grpcClient.js  index.js  routes.js  service_grpc_web_pb.js  service_pb.js
ui/units-ui/src/app/: layout.tsx  page.tsx
ui/units-ui/src/components/: BindForm.tsx  ExecuteForm.tsx  LoadDriverForm.tsx
ui/units-ui/src/layouts/: Admin.js
ui/units-ui/src/lib/: backend.ts
ui/units-ui/src/proto/: FinternetServiceClientPb.ts  ServiceServiceClientPb.ts  finternet_pb.d.ts  finternet_pb.js  service_pb.d.ts  service_pb.js
ui/units-ui/src/utils/: grpcClient.ts
ui/units-ui/src/variables/: charts.js
ui/units-ui/src/views/: LoginForm.js  SupportTokenDetails.js  SupportTokens.js
wit/: driver.wit  module.wit  types.wit
(+43 files in other folders)
