[package]
name = "units"
version = "0.1.0"
edition = "2021"

[features]
default = ['redis']
redis = []

[dependencies]

# Runtime
wasmtime = "27.0.0"
wasi-common = "27.0.0"
wat = "1.221.0"
tokio = { version = "1.42.0", features = ["full"] }

# Encoding & Decoding
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"

# Monitoring
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Error handling
anyhow = "1.0.93"

# gRPC
tonic = "0.12.2"
tonic-reflection = "0.12.2"
tonic-types = "0.12.2"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.0", features = ["v4"] }

prost = "0.13"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }

nanoid = "0.4.0"

redis = { version = "*" }
blake3 = "1.5.5"
jsonwebtoken = "9.3.0"

[build-dependencies]
cargo_metadata = "0.15.4"
tonic-build = "0.12.2"
anyhow = "1.0.93"
