[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
wasm-bindgen = "0.2.99"

# release build optimization
[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units
panic = 'abort'   # Remove panic unwinding code
strip = true      # Strip symbols from binary
