[package]
name = "component-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.38.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:units"

