[package]
name = "component-upi-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.38.0", features = ["bitflags"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
rand = "0.8.5"
url = "2.5.0"
bytes = "1"
urlencoding = "2.1.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:component-upi-driver"

[package.metadata.component.dependencies]
